2005-05-17  Li Peng  <lipeng@buaa.edu.cn>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/backend/bacon-video-widget-gst.c: (got_stream_length):
	* src/totem.c: (update_current_time):
	  Prevent window-flickering on VBR MPEG (#300785).

2005-05-13  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c: (xine_event_message),
	(xine_error), (bacon_video_widget_new): send error messages as such
	(duh!), also setup an event queue (Closes: #304035)
	* src/metadata-test.c: (main):
	* src/totem-video-thumbnailer.c: (main): call gnome_vfs_init()
	following some xine-lib changes to make sure we have access to
	the gnome-vfs methods

2005-05-13  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/backend/bvw-test.c: (main):
	  Init backend.

2005-05-12  Bastien Nocera  <hadess@hadess.net>

	* README: update to UTF-8
	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_class_init), (bacon_video_widget_button_press),
	(bacon_video_widget_show), (bacon_video_widget_hide):
	allow hiding the widget in the backend as well
	* src/totem.c: (totem_action_remote): fix compile warning

2005-05-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* README:
	  That is done...

2005-05-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/backend/bacon-video-widget-gst.c:
	(bacon_video_widget_realize), (bacon_video_widget_show),
	(bacon_video_widget_hide), (bacon_video_widget_class_init),
	(got_source):
	  Allow hiding of the video widget in the backend. No frontend
	  use for this yet, but who knows... Also unref return values
	  of g_object_get().

2005-05-11  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_remote): don't show the fullscreen popup
	on remote events if the fullscreen window isn't focused

2005-05-07  Bastien Nocera  <hadess@hadess.net>

	* src/metadata-test.c: (totem_create_full_path): update to allow
	testing cdda: urls