@@ -1,3 +1,8 @@
+2005-05-17  Bastien Nocera  <hadess@hadess.net>
+
+	* src/egg-*.[ch]: update from libegg CVS HEAD (Closes: #304574)
+	* src/totem-video-thumbnailer.c: fix build warning
+
 2005-05-17  Li Peng  <lipeng@buaa.edu.cn>
 
 	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
